--- a/assests/scss/imports/core/_mixin.scss
+++ b/assests/scss/imports/core/_mixin.scss
@@ -11,25 +11,25 @@ color: $color;
     gap: $gap;
     align-items: $items;
 }
-@mixin txtr1{
+@mixin txtr1($line:1){
     display:-webkit-box;
-    -webkit-line-clamp:1;
+    -webkit-line-clamp:$line;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
     word-break: break-word;
 }
-@mixin txtr2{
+@mixin txtr2($line:2){
     display:-webkit-box;
-    -webkit-line-clamp:2;
+    -webkit-line-clamp:$line;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
     word-break: break-word;
 }
-@mixin txtr3{
+@mixin txtr3($line:3){
     display:-webkit-box;
-    -webkit-line-clamp:3;
+    -webkit-line-clamp:$line;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
