--- a/assests/scss/imports/page/_home.scss
+++ b/assests/scss/imports/page/_home.scss
@@ -2,13 +2,17 @@
 @import "../core/variable";
 @import "../core/mixin";
 @import "../core/base";
-
-.banner {
-  // max-width: 100%;
-
-  .banner__header {
+.headpage{
+  .headpage__block {
+    position: sticky;
+    z-index: 5;
+    top: 0;
+    right: 0;
+    left: 0;
     width: 100%;
     padding: 30px 0;
+    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.06);
+    background-color: #fff;
     .headbar {
       display: flex;
       justify-content: space-between;
@@ -70,6 +74,11 @@
       }
     }
   }
+}
+.banner {
+  // max-width: 100%;
+
+  
   .banner__contents {
     display: flex;
     justify-content: space-between;
