--- a/assests/scss/style.css
+++ b/assests/scss/style.css
@@ -54,21 +54,28 @@ a {
   margin: 0 auto;
 }
 
-.banner .banner__header {
+.headpage .headpage__block {
+  position: sticky;
+  z-index: 5;
+  top: 0;
+  right: 0;
+  left: 0;
   width: 100%;
   padding: 30px 0;
+  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.06);
+  background-color: #fff;
 }
-.banner .banner__header .headbar {
+.headpage .headpage__block .headbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.banner .banner__header .headbar .headbar__middle {
+.headpage .headpage__block .headbar .headbar__middle {
   display: flex;
   align-items: center;
   gap: 40px;
 }
-.banner .banner__header .headbar .headbar__middle .headbar__middle_choice {
+.headpage .headpage__block .headbar .headbar__middle .headbar__middle_choice {
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
@@ -76,7 +83,7 @@ a {
   font-family: "Inter", sans-serif;
   position: relative;
 }
-.banner .banner__header .headbar .headbar__middle::after {
+.headpage .headpage__block .headbar .headbar__middle::after {
   content: "";
   position: absolute;
   bottom: -2px;
@@ -86,43 +93,44 @@ a {
   background-color: transparent;
   transition: background-color 0.3s ease;
 }
-.banner .banner__header .headbar .headbar__middle:hover::after {
+.headpage .headpage__block .headbar .headbar__middle:hover::after {
   background-color: #5827e4;
 }
-.banner .banner__header .headbar .headbar__right {
+.headpage .headpage__block .headbar .headbar__right {
   display: flex;
   align-items: center;
   gap: 15px;
 }
-.banner .banner__header .headbar .headbar__right .headbar__right-icons {
+.headpage .headpage__block .headbar .headbar__right .headbar__right-icons {
   display: flex;
   align-items: center;
   gap: 12px;
 }
-.banner .banner__header .headbar .headbar__right .headbar__right-icons .headbar__right-currency {
+.headpage .headpage__block .headbar .headbar__right .headbar__right-icons .headbar__right-currency {
   font-size: 14px;
   font-weight: 700;
   line-height: 21px;
   color: #777e90;
   font-family: "Inter", sans-serif;
 }
-.banner .banner__header .headbar .headbar__right .headbar__right-ava {
+.headpage .headpage__block .headbar .headbar__right .headbar__right-ava {
   display: flex;
   gap: 15px;
 }
-.banner .banner__header .headbar .headbar__right .headbar__right-ava .headbar__right-line {
+.headpage .headpage__block .headbar .headbar__right .headbar__right-ava .headbar__right-line {
   width: 1px;
   height: auto;
   opacity: 0.5;
   background: var(--gray-4, #b1b5c3);
 }
-.banner .banner__header .headbar .headbar__right .headbar__right-ava .head__right-avatar {
+.headpage .headpage__block .headbar .headbar__right .headbar__right-ava .head__right-avatar {
   width: 32px;
   height: 32px;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 19px;
 }
+
 .banner .banner__contents {
   display: flex;
   justify-content: space-between;
